--- a/portfolio/src/components/ProjectCard/ProjectCard.css
+++ b/portfolio/src/components/ProjectCard/ProjectCard.css
@@ -1,4 +1,7 @@
 .project-card {
+    font-size: 17px;
+    white-space: pre-wrap;
+    color: #292725;
     display: flex;
     flex-direction: column;
     align-items: center;
